@@ -1,3 +1,8 @@
+2006-09-01  fabian
+
+    * Fixed a memory leak.
+    * Fixed a bug that ignores tab style setting.
+    
 2006-08-30  fabian
 
     * Updated PSMTabBarControl to the latest CVS version. That fixed a frequent crash.
